--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2284,7 +2284,7 @@ select.list-dt:focus {
   margin-right: 6px;
 }
 .msoretirepop_p2_s5_box {
-  border: 0.25px solid #e8e8e8;
+  border: 0.25px solid #d8d8d8;
   width: calc(50% - 6px);
   border-radius: 9px;
   background-color: #fff;
