completes style guide

--- a/assets/css/_constants.scss
+++ b/assets/css/_constants.scss
@@ -31,3 +31,7 @@ $color30: #e6e7e8;
 $color31: #e8e8e8;
 $color32: #f8f9fa;
 $color33: #007dff;
+$color34: #edf6ff;
+$color35: #fabc20;
+$color36: rgba(178, 178, 178, 0.25);
+$color37: rgba(198, 198, 198, 0.7);
