--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -520,6 +520,10 @@ p {
   letter-spacing: -0.5px;
 }
 
+.w-80 {
+  width: 80px !important;
+}
+
 .w-1919-80 {
   @media screen and (max-width: 1919px) {
     width: 80px !important;
