--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -937,7 +937,7 @@ select.list-dt:focus {
   position: relative;
 }
 .planyybody.sidebaractive .swiper-slide img:nth-child(1) {
-  display: block;
+  /* display: block; */
   left: 0px;
   width: auto;
 }
@@ -10418,7 +10418,12 @@ select.list-dt:focus {
   }
 }
 
-.planyybody .swiper-slide:nth-child(3) img:nth-child(1) {
+.planyybody .swiper-slide:nth-child(3) img {
+  display: none !important;
+}
+
+.planyybody .swiper-slide:nth-child(3) img:nth-child(1),
+.planyybody .swiper-slide:nth-child(3) img:nth-child(2) {
   margin-right: 320px;
   max-height: calc(100vh - 122px - 66px);
 }
@@ -10429,25 +10434,64 @@ select.list-dt:focus {
 }
 @media screen and (min-width: 1024px) {
   .planyybody .swiper-slide:nth-child(3) img:nth-child(1) {
-    display: block;
+    margin-right: 442px;
+  }
+}
+.planyybody .swiper-slide:nth-child(3) img {
+  display: none;
+  height: unset;
+  object-fit: unset;
+  width: auto;
+}
+@media screen and (min-width: 1920px) {
+  .planyybody .swiper-slide:nth-child(3) img:nth-child(1) {
+    display: block !important;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1919px) {
+  .planyybody .swiper-slide:nth-child(3) img:nth-child(2) {
+    display: block !important;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 1023px) {
+  .planyybody .swiper-slide:nth-child(3) img:nth-child(3) {
+    display: block !important;
+    /* margin-right: 320px; */
+  }
+}
+@media screen and (max-width: 575px) {
+  .planyybody .swiper-slide:nth-child(3) img:nth-child(4) {
+    display: block !important;
   }
 }
 @media screen and (max-width: 1023px) {
-  .planyybody .swiper-slide:nth-child(3) img:nth-child(2) {
-    display: block;
+  .planyybody .swiper-slide:nth-child(3) img {
     width: 80%;
     margin-top: 0;
     max-width: 600px;
     position: absolute;
     top: 284px;
-    height: unset;
-    object-fit: unset;
+    margin-right: auto;
   }
 }
+@media screen and (min-height: 930px) {
+  .planyybody .swiper-slide:nth-child(3) img {
+    top: unset;
+    bottom: 0;
+  }
+}
+
 @media screen and (max-width: 575px) {
-  .planyybody .swiper-slide:nth-child(3) img:nth-child(2) {
+  .planyybody .swiper-slide:nth-child(3) img:nth-child(4) {
     width: 72%;
     top: 192px;
+  }
+}
+
+@media screen and (min-height: 650px) {
+  .planyybody .swiper-slide:nth-child(3) img:nth-child(4) {
+    bottom: -30px;
+    top: unset;
   }
 }
 
@@ -10459,7 +10503,7 @@ select.list-dt:focus {
   text-align: left;
   font-size: 96px;
   font-weight: bold;
-  line-height: 1;
+  line-height: 1.125;
 }
 
 @media screen and (max-width: 1919px) {
@@ -10486,6 +10530,8 @@ select.list-dt:focus {
     font-size: 40px;
     top: 214px;
     font-weight: 600;
+    width: 100%;
+    text-align: center;
   }
 }
 
